fixed some spacing issues

--- a/src/assets/scss/cart/_cart-summary.scss
+++ b/src/assets/scss/cart/_cart-summary.scss
@@ -29,6 +29,10 @@
     }
   }
 
+  @include e(large-paragraph) {
+    line-height: (22/12) !important;
+  }
+
   @include e(calcs) {
     margin-bottom: 20px;
   }
